# metaFinder

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/metafinder/: __init__.py  cli.py  custom_replacements.tsv  finder.py  import_replacements.py  models.py  normalize.py  tags.py
src/metafinder/sources/: __init__.py  generic.py  site_search.py  web_search.py
tests/: test_cover_url.py  test_fanqie_parser.py  test_finder_ranking.py  test_import_replacements.py  test_normalize.py
